<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_16dp">

    <ImageView
        android:id="@+id/img_avatar_music"
        android:layout_width="@dimen/dimen_64dp"
        android:layout_height="@dimen/dimen_64dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:contentDescription="@string/description_img_avatar"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:text="@string/name_music"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_artist_music"
        app:layout_constraintLeft_toRightOf="@id/img_avatar_music"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_artist_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:text="@string/artist_music"
        android:textColor="@color/foreignColor_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_avatar_music"
        app:layout_constraintTop_toBottomOf="@id/tv_name_music" />

    <ImageView
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:contentDescription="@string/description_image_favorite_music"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>