<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_148dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/dimen_8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/carView_img_download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_148dp"
            app:cardCornerRadius="@dimen/dimen_24dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_playlists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_avatar_playlist"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_download_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/playlist_download"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carView_img_download" />

        <TextView
            android:id="@+id/tv_total_music_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_music"
            android:textColor="@color/foreignColor_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_download_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>