<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activity.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_32sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_72dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/background_edt_search"
                android:drawableLeft="@drawable/ic_baseline_search_32"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/dimen_16dp"
                android:text="@string/hint_edt_search"
                android:textAllCaps="false"
                android:textColor="@color/foreignColor_2"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/tv_library" />

            <TextView
                android:id="@+id/tv_playlists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/playlists"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_search" />


            <include
                android:id="@+id/layout_playlists"
                layout="@layout/layout_playlists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_playlists" />

            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:text="@string/favorite"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_playlists" />

            <ProgressBar
                android:id="@+id/progress_load_list_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:indeterminateTint="@color/accentColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_favorite" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lv_music_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_favorite" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_minimize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:background="@drawable/background_minimize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar_music"
                android:layout_width="@dimen/dimen_80dp"
                android:layout_height="@dimen/dimen_80dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_music_minimize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:text="@string/name_music_minimize_player"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/img_avatar_music"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_play_minimize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:backgroundTint="@color/accentColor"
                android:contentDescription="@string/description_btn_play_minimize"
                android:src="@drawable/ic_baseline_play_arrow_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_music_minimize"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:rotation="-90"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/layout_minimize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_minimize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_4dp"
        android:text="@string/no_internet"
        android:textColor="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>